mlir/test/Dialect/Lattice/invalid/empty_entry_return.mlir
// Invalid: executable artifacts must return at least one value.
module attributes {
  lattice.ir_version = 2,
  lattice.schema_digest = "1380f1e819fc0eb1af587202ecec3c14ec2c981d249333c5061f0263f82072ad",
  lattice.input_names = [],
  lattice.input_roles = [],
  lattice.output_names = [],
  lattice.output_roles = [],
  lattice.weight_file = "weights.safetensors"
} {
  func.func @forward() {
    return
  }
}
